[gd_scene load_steps=9 format=3 uid="uid://dco6567k8aplj"]

[ext_resource type="Script" path="res://scripts/session/node_spawner.gd" id="1_7d53c"]
[ext_resource type="PackedScene" uid="uid://d17qx7m7mg25v" path="res://scenes/session/nodes/square_red_node.tscn" id="2_xp1eh"]

[sub_resource type="Curve2D" id="Curve2D_31g2s"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -168, -98, 0, 0, 0, 0, 167, -98, 0, 0, 0, 0, 167, 99, 0, 0, 0, 0, -168, 98, 0, 0, 0, 0, -168, -98)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_6cdls"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -50, -29, 0, 0, 0, 0, 49, -29, 0, 0, 0, 0, 51, 29, 0, 0, 0, 0, -50, 29, 0, 0, 0, 0, -50, -29)
}
point_count = 5

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_aky5e"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_sw47q"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_vnfxn"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_akjs4"]
normal = Vector2(-1, 0)

[node name="NodeSpawner" type="Node2D"]
script = ExtResource("1_7d53c")
node_scene = ExtResource("2_xp1eh")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Paths" type="Node2D" parent="."]

[node name="SpawnLocationPath" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_31g2s")

[node name="SpawnLocation" type="PathFollow2D" parent="Paths/SpawnLocationPath"]
position = Vector2(-168, -98)

[node name="FacingLocationPath" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_6cdls")

[node name="FacingLocation" type="PathFollow2D" parent="Paths/FacingLocationPath"]
position = Vector2(-50, -29)

[node name="DespawnZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DespawnZone"]
position = Vector2(0, 114)
shape = SubResource("WorldBoundaryShape2D_aky5e")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DespawnZone"]
position = Vector2(-184, 1)
shape = SubResource("WorldBoundaryShape2D_sw47q")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="DespawnZone"]
position = Vector2(0, -114)
shape = SubResource("WorldBoundaryShape2D_vnfxn")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="DespawnZone"]
position = Vector2(184, 0)
shape = SubResource("WorldBoundaryShape2D_akjs4")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
